--- a/src/components/shared/Navbar.module.css
+++ b/src/components/shared/Navbar.module.css
@@ -5,7 +5,6 @@
     top: 0;
     margin: 0 0 100px;
     box-shadow: 0px 5px 5px rgba(94, 74, 37, 0.4);
-
 }
 
 .container {
@@ -52,5 +51,22 @@
     font-weight: 500;
     color: #6f5643;
     font-size: 0.75rem;
+  }
 
+  @media (max-width: 1200px) {
+    .container {
+        padding: 15px 80px;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .container {
+        padding: 15px 40px;
+    }
+  }
+
+  @media (max-width: 555px) {
+    .container{
+        padding: 15px 20px;
+    }
   }
