shopCart styles added

--- a/src/components/shared/Cart.module.css
+++ b/src/components/shared/Cart.module.css
@@ -20,7 +20,7 @@
 }
 
 .data h3 {
-    color: #228455;
+    color: #22845f;
     margin-bottom: 5px;
   }
   
@@ -30,7 +30,7 @@
   }
 
   .quantity {
-  background: #8dcdbb;
+  background: #ecca43;
   width: 25px;
   height: 25px;
   line-height: 25px;
