--- a/src/components/ShopCart.module.css
+++ b/src/components/ShopCart.module.css
@@ -9,3 +9,126 @@
   .cartContainer {
     width: 70%;
   }
+
+  .payments {
+    background-color: #ab6146;
+    border-radius: 10px;
+    border: 1px solid #6f5643;
+    text-align: left;
+  }
+
+  .payments p {
+    color: #ece6c2;
+    margin: 20px 20px 10px;
+  }
+
+  .payments p span {
+    color: #f3cf3e;
+    font-weight: 500;
+  }
+
+  .buttonContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    margin: 50px 20px 10px;
+  }
+
+  .checkout {
+    display: inline-block;
+    background: #73bda8;
+    padding: 7px 16px;
+    color: #543e2e;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    transition: all 0.2s ease;
+    cursor: pointer;
+    box-shadow: rgba(57, 39, 2, 0.07) 0px 1px 1px, rgba(49, 22, 4, 0.07) 0px 2px 2px,
+    rgba(62, 33, 3, 0.07) 0px 4px 4px, rgba(51, 37, 2, 0.07) 0px 4px 8px,
+    rgba(52, 41, 2, 0.07) 0px 9px 16px;
+  }
+
+  .checkout:hover {
+    background-color: #d5a733;
+  } 
+
+  .clear {
+    display: inline-block;
+    padding: 7px 16px;
+    cursor: pointer;
+    color: #ece6c2;
+    background: rgba(49, 22, 4, 0.07);
+    border: none;
+    border-radius: 5px;
+    transition: all 0.2s ease;
+    font-size: 1rem;
+  }
+
+  .clear:hover {
+    color: #3a1606;
+  }
+
+  .complete h3 {
+    color: #6f5643;
+    margin: 30px 0 50px;
+    font-size: 1.2rem;
+  }
+
+  .complete a {
+    background-color: #73bda8;
+    display: inline-block;
+    text-decoration: none;
+    color: #644c3a;
+    height: 30px;
+    border: 1px outset #45a3b1;
+    border-radius: 4px;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    width: 90px;
+    font-weight: bold;
+    line-height: 30px;
+    box-shadow: rgba(93, 77, 50, 0.25) 0px 4px 12px -2px,
+      rgba(54, 35, 3, 0.3) 0px 3px 7px -3px;
+    margin-left: 5px;
+  }
+  
+  .complete a:hover {
+    background-color: #d5a733;
+    border: 1px outset #ae8725;
+  }
+
+  @media (max-width: 1200px) {
+    .container {
+      margin: 120px 80px 50px;
+    }
+  }
+
+  @media (max-width: 1050px) {
+    .container {
+      flex-direction: column-reverse;
+      margin: 120px 80px 50px;
+      align-items: center;
+    }
+    .cartContainer {
+      width: 100%;
+    }
+    .payments {
+        width: 100%;
+        margin-bottom: 20px;
+      }
+}
+
+@media (max-width: 768px) {
+    .container {
+      margin: 120px 40px 50px;
+    }
+  }
+  
+  @media (max-width: 555px) {
+    .container {
+      margin: 120px 20px 50px;
+    }
+  }
